--- a/PassiveWallpaper.csproj
+++ b/PassiveWallpaper.csproj
@@ -74,7 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BackfroundForm.cs">
+    <Compile Include="BackgroundForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Main.cs">
